--- a/source/_posts/jdbcEx-180821.md
+++ b/source/_posts/jdbcEx-180821.md
@@ -1,5 +1,5 @@
 ---
-title: Ojdbc_1_0821
+title: Ojdbc 사용 예제 _0821
 date: 2018-08-22 23:23:12
 tags:
 - PreparedStatement
@@ -10,11 +10,14 @@ categories:
 - JDBC
 ---
 
+DB의 emp 테이블에서 job = 'SALESMAN' 인 컬럼들을 조회하여 출력한다.
+출력 시 Emp 클래스를 이용하여 출력한다.
+
 Emp는 DTO클래스로 따로 만들었다. (사용 필드, toString, getter/setter)
 
-** __PreparedStatement__ 사용 : 더 안전하고 활용도 큼 -> Statement 대신 이걸로 쓰기!
+※ __PreparedStatement__ 사용 : 더 안전하고 활용도 큼 -> Statement 대신 이걸로 쓰기!
 
-### DAO 패키지
+
 ```java
 package ojdbc;
 
@@ -43,6 +46,7 @@ public class OjdbcEx_04 {
 
 	public static void main(String[] args) {
 		try {
+			// 드라이버 로드
 			Class.forName(DRIVER);
 		} catch (ClassNotFoundException e) {
 			e.printStackTrace();
@@ -101,3 +105,6 @@ public class OjdbcEx_04 {
 	}
 }
 ```
+
+** 드라이버 로드해주는 코드는 ojdbc4.jar 인가 ojdbc6.jar 부터는 자동으로 해줘서 안써도 실행은 된다고 한다.
+
