add 0827 study = setting web

--- a/source/_posts/jdbcEx-180821.md
+++ b/source/_posts/jdbcEx-180821.md
@@ -1,5 +1,5 @@
 ---
-title: Ojdbc 사용 예제 _0821
+title: PreparedStatement을 이용한 Ojdbc 사용 예제 _0821
 date: 2018-08-22 23:23:12
 tags:
 - PreparedStatement
@@ -107,4 +107,3 @@ public class OjdbcEx_04 {
 ```
 
 ** 드라이버 로드해주는 코드는 ojdbc4.jar 인가 ojdbc6.jar 부터는 자동으로 해줘서 안써도 실행은 된다고 한다.
-
